[package]
name = "hello-rust"
version = "0.1.0"
authors = ["bokuweb <bokuweb12@gmail.com>"]
license = "MIT"
build = "build.rs"

[lib]
name = "hello_rust"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.1.22"

[dependencies]
neon = "0.1.22"
# rocket = "0.3.11"
# rocket_codegen = "0.3.11"
